<package format="2">
  <name>pandora_behave</name>
  <version>0.0.0</version>
  <description>The pandora_behave package</description>

  <maintainer email="tsirif@gmail.com">Christos Tsirigotis</maintainer>
  <maintainer email="siderisk@auth.gr">Konstantinos Sideris</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>

  </export>
</package>
