<package format="2">
  <name>sensor_processor</name>
  <version>0.0.1</version>
  <description>Contains an interface that wraps ROS node with various runtime behaviour.</description>
  <maintainer email='tsirif@gmail.com'>Tsirigotis Christos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_common/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_common.git</url>

  <author>Tsirigotis Christos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>state_manager</build_depend>
  <build_depend>state_manager_communications</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>state_manager</run_depend>
  <run_depend>state_manager_communications</run_depend>

  <export>
  </export>
</package>
